<resources>
    <string name="app_name">Projet_E5_version_final</string>
    <string name="Login">CONNEXION</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="Inscription">Inscription</string>
    <string name="app_title1">Trouvez un rendez-vous avec</string>
    <string name="app_title2">une medecin generaliste</string>
    <string name="app_Rechercher">Rechercher</string>
    <string name="app_test1">app_test1</string>
    <string name="app_test2">app_test2</string>
    <string name="app_test3">app_test3</string>
    <string name="app_Categorie_medecin">Catégorie médecin</string>
    <string name="app_historique">Historique</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="app_password">Password</string>
    <string name="app_email">Email</string>
    <string name="login_mot_de_passe_oublie">Mot de passe oublié?</string>
    <string name="confirmer_mot_de_passe">Confirmer le mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="numéro_de_telephone">Numéro de téléphone</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="genre">genre</string>
    <string name="adresse">adresse</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="santé">Votre santé. Vos données </string>
    <string name="identité">Identité</string>
    <string name="mon_compte_connexion">Connexion</string>
    <string name="mon_profil">Mon profil</string>
    <string name="mon_profil_tel">Téléphone</string>
    <string name="mon_profil_mail">Mail</string>
    <string name="mon_profil_mot_de_passe">Mot de passe</string>
    <string name="app_default">Default</string>
    <string name="app_docteur">Je suis docteur</string>
    <string name="app_address">Address</string>
    <string name="app_change">Change_user_info</string>
    <string name="app_mon_compte">Mon Compte</string>
    <string name="app_profil">Mon profil</string>
    <string name="app_type">Type</string>
    <string name="app_specialty">Specialty</string>
    <string name="app_change_profil">Change</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_choisissez_votre_carrière">choisissez votre carrière</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_vérifierlecourriel">Vérifier Le Courriel</string>
    <string name="check_phone">Quatre derniers chiffres du numéro de téléphone</string>
    <string name="app_confirmer">Confirmer</string>
    <string name="new_mail">Nouveau Courrier</string>
    <string name="app_voir">Afficher Les Informations</string>
    <string name="app_supprimer">Supprimer</string>
    <string name="app_messages">Mes Messages</string>
    <string name="app_title">Title</string>
    <string name="app_envoyer">Envoyer</string>
    <string name="title_activity_test">TestActivity</string>
</resources>