<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Réinitialisez Votre Mot De Passe"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/app_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/check_phone"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_check_emailAndphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_vérifierlecourriel"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/ed_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/mon_profil_mot_de_passe"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ed_mdpconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/confirmer_mot_de_passe"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_confirmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_confirmer"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>