<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <com.google.android.material.button.MaterialButton
        android:id="+id/@string/santé"
        style="@style/MyButtonStyle"
        android:layout_width="348dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:ellipsize="start"
        android:foregroundTint="@color/black"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/santé"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/baseline_admin_panel_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="148dp"
        android:text="@string/identité"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mon_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="192dp"
        android:text="@string/mon_profil"
        android:textStyle="bold"
        android:textSize="16sp"
        app:icon="@drawable/baseline_account_circle_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>


